# AI-Powered-Resume-Match

./: README.md  app.py  pyproject.toml  requirements.txt  templates.py
.devcontainer/: devcontainer.json
job_descriptions/: job_descriptions.txt
src/model/: api.py  match_score.py
